# AllWay-Thailand

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/api/: package-lock.json  package.json
apps/api/prisma/: schema.prisma
apps/api/src/: index.ts
apps/api/src/lib/: claude.ts  mock-chat.ts  mock-data.ts  mock-state.ts  neo4j.ts  prisma.ts
apps/api/src/routes/: admin.ts  auth.ts  business.ts  chat.test.ts  chat.ts  destinations.ts  live-db.integration.test.ts  live-db.write.integration.test.ts  packages.ts  partners.ts  recommendations.ts  v1.test.ts  v1.ts
apps/atlas-canvas-hub-main/: package.json  tailwind.config.ts
apps/atlas-canvas-hub-main/src/: App.tsx  index.css
apps/atlas-canvas-hub-main/src/lib/: i18n.ts  store.ts
apps/atlas-canvas-hub-main/src/pages/: Explore.tsx  Index.tsx  Itinerary.tsx  PlaceDetail.tsx  Profile.tsx  Recommendations.tsx  Routes.tsx
apps/etl/: convert_food.py  neo4j_seeder.py  pull-hand-data.py  pyproject.toml  requirements.txt  run_all.py  tat_fetcher.py
apps/etl/food-scraping/: package.json
apps/etl/food-scraping/src/: ai.ts  db.ts  grid.ts  index.ts  sample-extract.ts  scraper.ts  test-launch.ts  test-node.js
apps/etl/hand-data/: fix_csv.py
apps/etl/hand-data/datagoth_db/: ingest.py
apps/web/: index.html  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
apps/web-example/: package.json
apps/web-example/src/lib/: api.ts
apps/web/src/: App.tsx  index.css
apps/web/src/lib/: i18n.ts  store.ts
dockerfiles/: api.Dockerfile  nginx.conf  postgres.Dockerfile  web.Dockerfile
(+33 files in other folders)
